--- a/app/build.gradle
+++ b/app/build.gradle
@@ -28,7 +28,7 @@ android {
     }*/
     buildTypes {
         release {
-            minifyEnabled false
+            minifyEnabled true
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
         }
     }
@@ -75,8 +75,11 @@ dependencies {
     //picasso library for displaying images in grid view
     implementation 'com.squareup.picasso:picasso:2.71828'
 
+
+
+
     //room database
-    /* def room_version = "2.3.0"
+   /*  def room_version = "2.3.0"
      implementation("androidx.room:room-runtime:$room_version")
      annotationProcessor "androidx.room:room-compiler:$room_version"
      // To use Kotlin annotation processing tool (kapt)
